# StartupPulse-AI

./: .gitignore  CASE_STUDY.md  CHANGELOG.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  GIT_CLEANUP_REPORT.md  GIT_FINAL_VERIFICATION.md  LICENSE  README.md  docker-compose.yml  generate_dataset.py  generate_metrics.py  pyproject.toml  requirements.txt  test_backend.py  train_cpu.py
.github/workflows/: ci.yml
.streamlit/: config.toml
dashboard/: app.py
dashboard/components/: __init__.py  cards.py  charts.py  header.py  section.py  sidebar.py
dashboard/styles/: __init__.py  custom.css  theme.py
dashboard/utils/: __init__.py  helpers.py
data/: employee_reviews.csv  test.csv  train.csv  validation.csv
data/processed/: test.csv  validation.csv
docs/: CONFIGURATION.md  DASHBOARD.md  FAQ.md  INSTALLATION.md  MODEL.md  QUICKSTART.md  ROADMAP.md  SHAP.md  TROUBLESHOOTING.md  USAGE.md  architecture.md
models/deberta_v3/: config.json
reports/: classification_report.txt  model_metrics.csv
reports/shap/: dashboard_text.html  verification_text.html
src/config/: config.py
src/data/: check_dataset.py  create_labels.py  download_dataset.py  preprocessing.py
src/explainability/: shap_explainer.py
src/inference/: inference.py
src/model/: evaluate.py  predict.py  tokenizer.py  train.py  trainer.py
src/pipeline/: dataset.py  prepare_dataset.py
src/utils/: helpers.py  logger.py  metrics.py  seed.py
src/visualization/: charts.py  eda.py
tests/: test_core.py
