[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "startuppulse_ai"
version = "1.3.0"
description = "Explainable Aspect-Based Sentiment Analysis using DeBERTa-v3 and SHAP"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["src*"]